--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,49 @@
     <title>HTML Academy: Пинк</title>
   </head>
   <body>
+    <header class="page-header">
+      <img class="page-header__logo-image" src="#" width="100" height="100" alt="Логотип приложения Пинк">
+      <nav class="main-nav">
+        <button class="main-nav_toggle" type="button">Открыть меню</button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Фотографии</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">HTML Academy</a>
+          </li>
+        </ul>
+        <img class="page-header__presentation-image" src="#" width="100" height="100" alt="Демонстрация приложения">
+      </nav>
+    </header>
+    <main class="main-page">
+      <h1 class="visually-hidden">Мобильное приложение Pink</h1>
+      <section class="get-app">
+        <h2 class="get-app__banner">Скачать приложение</h2>
+        <ul class="get-app_list appstore-list">
+          <li class="appstore-list__item">
+            <a><img class="appstore-list_item-apple" src="#" width="100" height="100" alt="Лого Эппл"></a>
+          </li>
+          <li class="appstore-list__item">
+            <a><img class="appstore-list_item-android" src="#" width="100" height="100" alt="Лого Андройд"></a>
+          </li>
+          <li class="appstore-list__item">
+            <a><img class="appstore-list_item-windows" src="#" width="100" height="100" alt="Лого Виндоуз"></a>
+          </li>
+        </ul>
+        <p class="get-app_environ">
+          Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+        </p>
+      </section>
+      <section class="advanteges">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
+      </section>
+    </main>
   </body>
 </html>
