--- a/source/index.html
+++ b/source/index.html
@@ -46,8 +46,90 @@
         </p>
       </section>
       <section class="advanteges">
-
+        <h2 class="visually-hidden">Приемущества приложения Pink</h2>
+        <p class="advanteges__issue">Устали от серости мегаполиса?</p>
+        <p class="advanteges__answer">Нам есть, что вам предложить!</p>
+        <ul class="advanteges__list">
+          <li class="advanteges-item">
+            <h3 class="advanteges__title">Поднимает настроение</h3>
+            <p class="advanteges__description">
+              Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!
+            </p>
+          </li>
+          <li class="advanteges-item">
+            <h3 class="advanteges__title">Меняет мир вокруг</h3>
+            <p class="advanteges__description">
+              Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
+            </p>
+          </li>
+          <li class="advanteges-item">
+            <h3 class="advanteges__title">Заводит новых друзей</h3>
+            <p class="advanteges__description">
+              Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="reviews">
+        <div class="reviews-wrapper slider">
+          <h2 class="visually-hidden">Отзывы о Pink</h2>
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <p class="reviews__text">
+                «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
+                А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+              </p>
+            </blockquote>
+          </div>
+        </div>
+        <p class="reviews__toggles slider__toggles">
+          <button class="slider__toggle">1</button>
+          <button class="slider__toggle">2</button>
+          <button class="slider__toggle">3</button>
+        </p>
+      </section>
+      <section class="packages">
+        <h2 class="visually-hidden">Тарифы</h2>
+        <ul class="packages__list slider">
+          <li class="packages__item slider__item">
+            <p class="packages__name">Стандарт</p>
+            <div class="packages__option">
+              <p>Розовый фильтр</p>
+              <img class="packages__option-enabled" src="#" width="100" height="100" alt="включено">
+            </div>
+            <div class="packages__option">
+              <p>Смайлики</p>
+              <img class="packages__option-enabled" src="#" width="100" height="100" alt="включено">
+            </div>
+            <div class="packages__option">
+              <p>Комментарии</p>
+              <img class="packages__option-disabled" src="#" width="100" height="100" alt="выключено">
+            </div>
+          </li>
+        </ul>
+        <p class="packages__toggles slider__toggles">
+          <button class="slider__toggle">1</button>
+          <button class="slider__toggle">2</button>
+          <button class="slider__toggle">3</button>
+        </p>
       </section>
     </main>
+    <footer class="page-footer">
+      <h1 class="visually-hidden">Наши контакты</h1>
+      <div class="page-footer__contacts contacts">
+        <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
+        <p class="contacts__phone">Звоните:<br>
+          <a class="contacts__phone-number" href="#">+7(812)555-66-66</a>
+        </p>
+        <p class="contacts__email">Звоните:<br>
+          <a class="contacts__email-address" href="#">mail@htmlacademy.ru</a>
+        </p>
+        <p class="contacts__post">Звоните:<br>
+          <a class="contacts__post-address" href="#">ул. Большая Конюшенная, 19/8</a>
+        </p>
+        <img class="contacts__map" src="#" width="320" height="200" alt="Адрес на карте">
+      </div>
+    </footer>
   </body>
 </html>
