Добавлена стоимоть тарифа

--- a/source/index.html
+++ b/source/index.html
@@ -94,6 +94,7 @@
         <ul class="packages__list slider">
           <li class="packages__item slider__item">
             <p class="packages__name">Стандарт</p>
+            <p class="packages__price">3,99 USD</p>
             <div class="packages__option">
               <p>Розовый фильтр</p>
               <img class="packages__option-enabled" src="#" width="100" height="100" alt="включено">
