--- a/source/index.html
+++ b/source/index.html
@@ -32,13 +32,13 @@
         <h2 class="get-app__banner">Скачать приложение</h2>
         <ul class="get-app_list appstore-list">
           <li class="appstore-list__item">
-            <a><img class="appstore-list_item-apple" src="#" width="100" height="100" alt="Лого Эппл"></a>
+            <a><img class="appstore-list_item--apple" src="#" width="100" height="100" alt="Лого Эппл"></a>
           </li>
           <li class="appstore-list__item">
-            <a><img class="appstore-list_item-android" src="#" width="100" height="100" alt="Лого Андройд"></a>
+            <a><img class="appstore-list_item--android" src="#" width="100" height="100" alt="Лого Андройд"></a>
           </li>
           <li class="appstore-list__item">
-            <a><img class="appstore-list_item-windows" src="#" width="100" height="100" alt="Лого Виндоуз"></a>
+            <a><img class="appstore-list_item--windows" src="#" width="100" height="100" alt="Лого Виндоуз"></a>
           </li>
         </ul>
         <p class="get-app_environ">
@@ -50,19 +50,19 @@
         <p class="advanteges__issue">Устали от серости мегаполиса?</p>
         <p class="advanteges__answer">Нам есть, что вам предложить!</p>
         <ul class="advanteges__list">
-          <li class="advanteges-item">
+          <li class="advanteges__item">
             <h3 class="advanteges__title">Поднимает настроение</h3>
             <p class="advanteges__description">
               Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!
             </p>
           </li>
-          <li class="advanteges-item">
+          <li class="advanteges__item">
             <h3 class="advanteges__title">Меняет мир вокруг</h3>
             <p class="advanteges__description">
               Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
             </p>
           </li>
-          <li class="advanteges-item">
+          <li class="advanteges__item">
             <h3 class="advanteges__title">Заводит новых друзей</h3>
             <p class="advanteges__description">
               Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
@@ -71,7 +71,7 @@
         </ul>
       </section>
       <section class="reviews">
-        <div class="reviews-wrapper slider">
+        <div class="reviews__wrapper slider">
           <h2 class="visually-hidden">Отзывы о Pink</h2>
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
@@ -97,15 +97,15 @@
             <p class="packages__price">3,99 USD</p>
             <div class="packages__option">
               <p>Розовый фильтр</p>
-              <img class="packages__option-enabled" src="#" width="100" height="100" alt="включено">
+              <img class="packages__option--enabled" src="#" width="100" height="100" alt="включено">
             </div>
             <div class="packages__option">
               <p>Смайлики</p>
-              <img class="packages__option-enabled" src="#" width="100" height="100" alt="включено">
+              <img class="packages__option--enabled" src="#" width="100" height="100" alt="включено">
             </div>
             <div class="packages__option">
               <p>Комментарии</p>
-              <img class="packages__option-disabled" src="#" width="100" height="100" alt="выключено">
+              <img class="packages__option--disabled" src="#" width="100" height="100" alt="выключено">
             </div>
           </li>
         </ul>
@@ -116,9 +116,9 @@
         </p>
       </section>
     </main>
-    <footer class="page-footer">
+    <footer class="title-footer">
       <h1 class="visually-hidden">Наши контакты</h1>
-      <div class="page-footer__contacts contacts">
+      <div class="title-footer__contacts contacts">
         <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
         <p class="contacts__phone">Звоните:<br>
           <a class="contacts__phone-number" href="#">+7(812)555-66-66</a>
