--- a/source/photo.html
+++ b/source/photo.html
@@ -30,7 +30,7 @@
       <p class="photo-page__attention">Взгляните на фотографии, которые выкладывают пользователи!
         Видите, как не хватает ваших?</p>
       <section class="users-photo">
-        <article class="user-photo__item user-card">
+        <article class="users-photo__item user-card">
           <img class="user-card__image user-card__image-panoramic" src="#" width="100" height="100" alt="Панорамный вид">
           <blockquote class="user-card__info">
             <cite class="user-card__name">
@@ -43,7 +43,7 @@
             <button class="user-card__like" type="button">нравится:215</button>
           </blockquote>
         </article>
-        <article class="user-photo__item user-card">
+        <article class="users-photo__item user-card">
           <img class="user-card__image" src="#" width="100" height="100" alt="Автомобиль">
           <blockquote class="user-card__info">
             <cite class="user-card__name">
@@ -56,7 +56,7 @@
             <button class="user-card__like" type="button">нравится:356</button>
           </blockquote>
         </article>
-        <article class="user-photo__item user-card">
+        <article class="users-photo__item user-card">
           <img class="user-card__image" src="#" width="100" height="100" alt="Барабаны">
           <blockquote class="user-card__info">
             <cite class="user-card__name">
@@ -69,7 +69,7 @@
             <button class="user-card__like" type="button">нравится:666</button>
           </blockquote>
         </article>
-        <article class="user-photo__item user-card">
+        <article class="users-photo__item user-card">
           <img class="user-card__image" src="#" width="100" height="100" alt="Небо над крышей">
           <blockquote class="user-card__info">
             <cite class="user-card__name">
@@ -82,7 +82,7 @@
             <button class="user-card__like" type="button">нравится:215</button>
           </blockquote>
         </article>
-        <article class="user-photo__item user-card">
+        <article class="users-photo__item user-card">
           <img class="user-card__image" src="#" width="100" height="100" alt="Кубанский рынок">
           <blockquote class="user-card__info">
             <cite class="user-card__name">
@@ -95,7 +95,7 @@
             <button class="user-card__like" type="button">нравится:4</button>
           </blockquote>
         </article>
-        <article class="user-photo__item user-card">
+        <article class="users-photo__item user-card">
           <img class="user-card__image" src="#" width="100" height="100" alt="Горный спуск">
           <blockquote class="user-card__info">
             <cite class="user-card__name">
@@ -108,7 +108,7 @@
             <button class="user-card__like" type="button">нравится:150</button>
           </blockquote>
         </article>
-        <article class="user-photo__item user-card">
+        <article class="users-photo__item user-card">
           <img class="user-card__image" src="#" width="100" height="100" alt="Крыло самолета">
           <blockquote class="user-card__info">
             <cite class="user-card__name">
