--- a/source/index.html
+++ b/source/index.html
@@ -115,7 +115,7 @@
             </p>
           </div>
         </section>
-        <section class="packages">
+        <!-- <section class="packages">
           <div class="packages__wrapper slider">
             <h2 class="visually-hidden">Тарифы</h2>
             <ul class="packages__list slider__list">
@@ -165,9 +165,9 @@
               <a href="#">ул. Большая Конюшенная, 19/8</a>
             </p>
           </div>
-        </section>
+        </section> -->
       </main>
-      <footer class="page-footer">
+      <footer class="page-footer page-footer--index">
         <img class="page-footer__logo-image" src="img/logo-pink-blue-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
         <div class="page-footer__social social">
           <ul class="social__list">
