--- a/source/index.html
+++ b/source/index.html
@@ -9,10 +9,12 @@
   <body>
     <header class="page-header">
       <nav class="main-nav container">
-        <div class="main-nav__conteiner">
-          <div class="main-nav__header">
+        <div class="main-nav__content">
+          <div class="main-nav__header main-nav__header--closed">
             <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
-            <button class="main-nav__toggle" type="button">Открыть меню</button>
+            <button class="main-nav__toggle" type="button">
+              <span class="visually-hidden">Открыть меню</span>
+            </button>
           </div>
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
@@ -30,9 +32,9 @@
           </ul>
         </div>
       </nav>
-      <section class="conteiner get-app">
+      <section class="get-app container">
         <img class="get-app__image" src="img/iphone-hand-mobile@1x.png" width="100" height="100" alt="Демонстрация приложения">
-        <div class="get-app__conteiner">
+        <div class="get-app__content">
           <h2 class="get-app__banner">Скачать приложение</h2>
           <p class="get-app__slogan">Взгляните на жизнь иначе</p>
           <ul class="get-app__list appstore-list">
@@ -54,8 +56,8 @@
     </header>
     <main class="main-page">
       <h1 class="visually-hidden">Мобильное приложение Pink</h1>
-      <section class="advanteges">
-        <div class="container advanteges__content">
+      <section class="container advanteges">
+        <div class="advanteges__content">
           <h2 class="visually-hidden">Приемущества приложения Pink</h2>
           <p class="advanteges__issue">Устали от серости мегаполиса?</p>
           <p class="advanteges__answer">Нам есть, что вам предложить!</p>
@@ -79,47 +81,54 @@
               </p>
             </li>
           </ul>
-          <article class="advanteges__duration">
+        </div>
+        <article class="advanteges__duration">
+          <div class="advanteges__duration-content container">
+            <div class="advanteges__clock">
+              <span class="advanteges__clock-time">24</span>
+            </div>
             <div class="advanteges__duration-wrapper">
-              <h3 class="advanteges__time-effect">Эффект на 24 часа</h3>
+              <h3 class="advanteges__time-effect">Эффект<br> на 24 часа</h3>
               <p class="advanteges__research">Британские ученые провели исследования
-                и доказали, что положительный эффект от использования приложения длится целые сутки!
+                и доказали, что положительный эффект<br> от использования приложения длится целые сутки!
               </p>
               <a class="advanteges__more" href="#">Узнать больше об исследовании</a>
             </div>
-          </article>
-        </div>
-      </section>
-      <section class="container reviews">
-        <div class="reviews__wrapper slider">
-          <h2 class="visually-hidden">Отзывы о Pink</h2>
-          <button class="reviews__previous" type="button">
-            <span class="visually-hidden">Назад</span>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
-              <path d="M2.045,20.859L21.458,1.446c0.331-0.331,0.331-0.867,0-1.198c-0.33-0.331-0.867-0.331-1.197,0L0.248,20.261 c-0.331,0.33-0.331,0.867,0,1.197l20.013,20.013c0.164,0.165,0.382,0.248,0.599,0.248s0.434-0.083,0.599-0.248 c0.331-0.331,0.331-0.867,0-1.198L2.045,20.859z"/>
-            </svg>
-          </button>
-          <div class="reviews__list slider__list">
-            <blockquote class="reviews__item slider__item">
-              <cite class="reviews__author-name">Николай Петров</cite>
-              <p class="reviews__author-is">25 лет, водитель трамвая</p>
-              <p class="reviews__text">
-                «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
-                А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
-              </p>
-            </blockquote>
           </div>
-          <button class="reviews__next" type="button">
-            <span class="visually-hidden">Вперед</span>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
-              <path d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z"/>
-            </svg>
-          </button>
-          <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
-          </p>
+        </article>
+      </section>
+      <section class="reviews">
+        <div class="container reviews__content">
+          <div class="reviews__wrapper slider">
+            <h2 class="visually-hidden">Отзывы о Pink</h2>
+            <button class="reviews__previous" type="button">
+              <span class="visually-hidden">Назад</span>
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+                <path d="M2.045,20.859L21.458,1.446c0.331-0.331,0.331-0.867,0-1.198c-0.33-0.331-0.867-0.331-1.197,0L0.248,20.261 c-0.331,0.33-0.331,0.867,0,1.197l20.013,20.013c0.164,0.165,0.382,0.248,0.599,0.248s0.434-0.083,0.599-0.248 c0.331-0.331,0.331-0.867,0-1.198L2.045,20.859z"/>
+              </svg>
+            </button>
+            <div class="reviews__list slider__list">
+              <blockquote class="reviews__item slider__item">
+                <cite class="reviews__author-name">Николай Петров</cite>
+                <p class="reviews__author-is">25 лет, водитель трамвая</p>
+                <p class="reviews__text">
+                  «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
+                  А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+                </p>
+              </blockquote>
+            </div>
+            <button class="reviews__next" type="button">
+              <span class="visually-hidden">Вперед</span>
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+                <path d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z"/>
+              </svg>
+            </button>
+            <p class="reviews__toggles slider__toggles">
+              <button class="slider__toggle" type="button">1</button>
+              <button class="slider__toggle" type="button">2</button>
+              <button class="slider__toggle" type="button">3</button>
+            </p>
+          </div>
         </div>
       </section>
       <!-- <section class="packages">
@@ -174,8 +183,8 @@
         </div>
       </section> -->
     </main>
-    <footer class="container page-footer">
-      <div class="page-footer__content page-footer__content--index">
+    <footer class="page-footer">
+      <div class="container page-footer__content page-footer__content--index">
         <img class="page-footer__logo-image" src="img/logo-pink-blue-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
         <ul class="page-footer__social social">
           <li class="social__item">
