--- a/source/photo.html
+++ b/source/photo.html
@@ -9,19 +9,21 @@
   <body>
     <header class="page-header">
       <nav class="container main-nav">
-        <div class="main-nav__content">
-          <div class="main-nav__header main-nav__header--closed">
-            <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
-            <button class="main-nav__toggle" type="button">
-              <span class="visually-hidden">Открыть меню</span>
-            </button>
+        <div class="main-nav__content main-nav__content--opened">
+          <div class="main-nav__header">
+            <a href="index.html">
+              <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
+            </a>
           </div>
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
               <a href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="photo.html">Фотографии</a>
+              <a>Фотографии</a>
             </li>
             <li class="site-list__item">
               <a href="form.html">Конкурс</a>
