--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header">
       <nav class="main-nav container">
-        <div class="main-nav__content main-nav__content--opened">
+        <div class="main-nav__content main-nav__content--closed main-nav__content--nojs">
           <div class="main-nav__header">
             <a href="index.html">
               <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
@@ -83,5 +83,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
