--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header">
       <nav class="main-nav container">
-        <div class="main-nav__content main-nav__content--opened main-nav__content--nojs">
+        <div class="main-nav__content main-nav__content--closed main-nav__content--nojs">
           <div class="main-nav__header">
             <img class="main-nav__logo-image" src="img/logo-pink-white-mobile.svg" width="100" height="100" alt="Логотип приложения Пинк">
           </div>
@@ -227,20 +227,6 @@
         </div>
       </div>
     </footer>
-
-    <script>
-      var navCont = document.querySelector('.main-nav__content');
-      var navToggle = document.querySelector('.main-nav__toggle');
-
-      navToggle.addEventListener('click', function() {
-        if (navCont.classList.contains('.main-nav__content--opened')) {
-          navCont.classList.remove('.main-nav__content--opened');
-          navCont.classList.add('.main-nav__content--closed');
-        } else {
-          navCont.classList.add('.main-nav__content--closed');
-          navCont.classList.remove('.main-nav__content--opened');
-        }
-      });
-    </script>
+    <script src="js/main-nav.js"></script>
   </body>
 </html>
