завершена адаптивная верстка

--- a/source/form.html
+++ b/source/form.html
@@ -56,28 +56,28 @@
             <legend class="form__titles form__titles--progress">Ваши безбашенные достижения в путешествии</legend>
 
             <input class="visually-hidden form__progress-checkbox" type="checkbox" name="shark" id="shark-filter" checked>
-            <label class="form__progress-name" for="shark-filter">Сделал селфи с акулой</label>
+            <label class="form__progress-name form__progress-name--shark" for="shark-filter">Сделал селфи с акулой</label>
 
             <input class="visually-hidden form__progress-checkbox" type="checkbox" name="beach" id="beach-filter" checked>
-            <label class="form__progress-name" for="beach-filter">Обгорел на пляже</label>
+            <label class="form__progress-name form__progress-name--beach" for="beach-filter">Обгорел на пляже</label>
 
             <input class="visually-hidden form__progress-checkbox" type="checkbox" name="chuck" id="chuck-filter">
-            <label class="form__progress-name" for="chuck-filter">Видел Чака Норриса</label>
+            <label class="form__progress-name form__progress-name--chuck" for="chuck-filter">Видел Чака Норриса</label>
 
             <input class="visually-hidden form__progress-checkbox" type="checkbox" name="souvenir" id="souvenir-filter">
-            <label class="form__progress-name" for="souvenir-filter">Накупил сувениров</label>
+            <label class="form__progress-name form__progress-name--souvenir" for="souvenir-filter">Накупил сувениров</label>
 
             <input class="visually-hidden form__progress-checkbox" type="checkbox" name="tower" id="tower-filter" checked>
-            <label class="form__progress-name" for="tower-filter">Удержал башню</label>
+            <label class="form__progress-name form__progress-name--tower" for="tower-filter">Удержал башню</label>
 
             <input class="visually-hidden form__progress-checkbox" type="checkbox" name="hotel" id="hotel-filter">
-            <label class="form__progress-name" for="hotel-filter">Разгромил отель</label>
+            <label class="form__progress-name form__progress-name--hotel" for="hotel-filter">Разгромил отель</label>
           </fieldset>
           <fieldset class="form__contacts">
             <legend class="form__titles form__titles--contacts">Контактная информация</legend>
-            <label class="form__field-title form__field-title--phone" for="phone">Номер телефона</label>
+            <label class="form__field-title form__field-title--phone" for="phone"><div class="form__field-icon form__field-icon--phone"></div>Номер телефона</label>
             <input class="form__field form__field--phone" type="text" id="phone" name="form-phone" placeholder="Номер, пожалуйста">
-            <label class="form__field-title form__field-title--email" for="email">Адрес почты</label>
+            <label class="form__field-title form__field-title--email" for="email"><div class="form__field-icon"></div>Адрес почты</label>
             <input class="form__field form__field--email" type="text" id="email" name="form-email" placeholder="Введите почту*">
           </fieldset>
           <fieldset class="form__application">
@@ -145,6 +145,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/main-nav.js"></script>
+    <!-- <script src="js/main-nav.js"></script> -->
   </body>
 </html>
