--- a/source/index.html
+++ b/source/index.html
@@ -301,6 +301,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/main-nav.js"></script>
+    <!-- <script src="js/main-nav.js"></script> -->
   </body>
 </html>
