--- a/source/photo.html
+++ b/source/photo.html
@@ -253,6 +253,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/main-nav.js"></script>
+    <!-- <script src="js/main-nav.js"></script> -->
   </body>
 </html>
